# shadowsocks-rust

./: .gitignore  .gitmodules  Cargo.toml  Makefile
crates/shadowsocks-service/: Cargo.toml
crates/shadowsocks-service/src/: config.rs
crates/shadowsocks-service/src/acl/: mod.rs
crates/shadowsocks-service/src/local/: context.rs  mod.rs  utils.rs
crates/shadowsocks-service/src/local/dns/: server.rs
crates/shadowsocks-service/src/local/net/tcp/: auto_proxy_stream.rs
crates/shadowsocks-service/src/local/net/udp/: association.rs
crates/shadowsocks-service/src/local/socks/server/socks5/: tcprelay.rs  udprelay.rs
crates/shadowsocks-service/src/local/tun/: mod.rs
crates/shadowsocks-service/src/local/tun/sys/unix/apple/: macos.rs
crates/shadowsocks-service/src/manager/: mod.rs
crates/shadowsocks-service/src/server/: mod.rs
crates/shadowsocks/src/net/sys/unix/bsd/: freebsd.rs  macos.rs
crates/shadowsocks/src/net/sys/unix/linux/: mod.rs
scripts/: build_apple_xcframework.sh
src/: main.rs
src/service/: local.rs  localfromjson.rs  manager.rs  mod.rs  server.rs
src/service/test/: config.json
ss_client/: Cargo.toml
ss_client/src/: chn.acl  config.json  config.rs  file.rs  lib.rs  log.yaml  main.rs  yaml.rs
ss_client_c/: Cargo.toml  Makefile
ss_client_c/src/: lib.rs
tun/src/platform/macos/: device.rs
