[package]
name = "ss_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
shadowsocks-rust = { path = "..",default-features = false,features = [
    "local-http",
    "local-tun",
    "local-dns",
    "multi-threaded",
    "logging",
    "server"
    ]}

clap = "*"